ingress/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: pco
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host:  test.172.28.128.7.xip.io
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello
          servicePort: 8082
