ingress/kube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: XX.XX.XX.XX
spec:
  rules:
  - host: test.172.28.128.7.xip.io
    http:
      paths: 
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 9090
